# wordpress

./: .gitignore  README.md  docker-compose.yaml
api/: Dockerfile  pyproject.toml  stub_users.sql
api/api/: crud.py  database.py  main.py  models.py  schemas.py
docs/: technical.md
wordpress/: Dockerfile
wordpress/config/: wp-config.php
wordpress/nginx/nginx-conf.d/: 99-default-server.conf
wordpress/nginx/nginx-vhost-conf.d/: 30-ping.conf
wordpress/wp-content/plugins/custom-plugin/: common-custom-code.php
wordpress/wp-content/plugins/custom-plugin/team/: block.json  team.asset.php  team.js
wordpress/wp-content/plugins/custom-plugin/team/assets/: editor-styles.css  styles.css
