[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Ryan Rodriguez <ryanrodriguez@protonmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.16"
mysql-connector-python = "^8.0.33"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
